<resources>
    <string name="app_name">Vegan Detective</string>
    <string name="test">test</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian" />
    <string name="carnivore">Carnivore</string>
    <string name="title_activity_basic_home">BasicHome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="items">Products</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="calories">Calories</string>
    <string name="description">Description</string>
    <string name="item_name">Item Name</string>
    <string name="submit_button">Submit</string>
    <string name="home">Home Page</string>
    <string name="add_item">Add Item</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="recommend_me_meals">Recommend me Meals</string>
    <string name="caloriesequals">\"calories: \"</string>
    <string name="name">meal name</string>
    <string name="meal_name">meal name</string>
    <string name="meal_calories">meal calories</string>
    <string name="meal_duration">meal duration</string>
    <string name="meal_is_already_existed">This Meal is already existed!</string>
    <string name="select_items_used_in_this_meal">Select Items used in this meal:</string>
    <string name="meal_duration_in_minutes">Meal Duration in Minutes</string>
    <string name="meal_description">Meal Description</string>
    <string name="select_an_image">Select an Image</string>
    <string name="select_items">Select Items</string>
    <string name="save_new_meal">Save new meal</string>
    <string name="update">update :</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_new_meal">Add New Meal</string>
    <string name="items_selected">Items:</string>
    <string name="status">status:</string>
    <string name="deselect">Deselect</string>
    <string name="meal_already_existed">Meal already existed</string>
</resources>
