<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="94dp"
        android:layout_margin="1dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="102dp"
            android:layout_height="73dp"
            android:layout_margin="10dp"

            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="94dp"
            android:layout_margin="1dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/meal_name"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/meal_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/meal_calories"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/meal_calories"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/meal_duration"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/meal_duration"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/meal_description"
        android:layout_width="368dp"
        android:layout_height="67dp"
        android:layout_margin="1dp"
        android:text="@string/test"
        android:textSize="20sp" />


</LinearLayout>